--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,6 @@
 	"minAppVersion": "0.15.0",
 	"description": "Demonstrates some of the capabilities of the Obsidian API.",
 	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"authorUrl": "https://gravatar.com/echiduna",
 	"isDesktopOnly": false
 }
